--- a/Image_dataset_download/dataset_extraction_and_download.ipynb
+++ b/Image_dataset_download/dataset_extraction_and_download.ipynb
@@ -15,13 +15,17 @@
     "from threading import Thread\n",
     "\n",
     "errors = 0\n",
+    "downloaded = 0\n",
     "\n",
     "def save_img(row,image_name):\n",
     "    global errors\n",
+    "    global downloaded\n",
     "    try:\n",
     "        img_data = requests.get(row).content\n",
     "        with open('downloaded/'+image_name+'.jpg', 'wb') as handler:\n",
     "            handler.write(img_data)\n",
+    "        downloaded+=1\n",
+    "        print('downloaded: '+dowloaded)\n",
     "    except:\n",
     "        errors+=1\n",
     "\n",
@@ -44,19 +48,13 @@
     "        datasets[doc] = pd.concat(subsets, axis=0, ignore_index=True)\n",
     "        \n",
     "    for row in datasets['photos']['photo_image_url']:\n",
-    "        #if i>2000: break\n",
-    "        #if len(row)<3: continue\n",
-    "        #print(row[0].split(',')[0])\n",
     "        if i<0: #jen podmínka pro ty co už mám stažené, stačí i=0 když není potřeba\n",
     "            i+=1\n",
     "            continue\n",
     "        image_name = datasets['photos']['photo_id'][i]\n",
     "        Thread(target=save_img, args=(row, image_name)).start()\n",
-    "        clear_output()\n",
-    "        print('saved', \" \", i)\n",
     "        i+=1\n",
     "        if i>6000+errors:break #zastavovací podmínka\n",
-    "    print('all saved')\n",
     "    \n",
     "if __name__ == '__main__':\n",
     "    main()"
