--- a/Image_dataset_download/dataset_extraction_and_download.ipynb
+++ b/Image_dataset_download/dataset_extraction_and_download.ipynb
@@ -13,6 +13,8 @@
     "import requests\n",
     "from IPython.display import clear_output\n",
     "from threading import Thread\n",
+    "import time\n",
+    "import threading\n",
     "\n",
     "errors = 0\n",
     "downloaded = 0\n",
@@ -25,13 +27,14 @@
     "        with open('downloaded/'+image_name+'.jpg', 'wb') as handler:\n",
     "            handler.write(img_data)\n",
     "        downloaded+=1\n",
-    "        print('downloaded: '+dowloaded)\n",
     "    except:\n",
     "        errors+=1\n",
     "\n",
     "def main():\n",
     "    \n",
     "    global errors\n",
+    "    global downloaded\n",
+    "    \n",
     "    i=0\n",
     "    path = './'\n",
     "    documents = ['photos', 'keywords', 'collections', 'conversions', 'colors']\n",
@@ -52,10 +55,14 @@
     "            i+=1\n",
     "            continue\n",
     "        image_name = datasets['photos']['photo_id'][i]\n",
+    "        while threading.active_count() >=30:\n",
+    "            time.sleep(10)\n",
     "        Thread(target=save_img, args=(row, image_name)).start()\n",
+    "        print('downloaded: '+str(downloaded))\n",
+    "        #save_img(row, image_name)\n",
     "        i+=1\n",
     "        if i>6000+errors:break #zastavovací podmínka\n",
-    "    \n",
+    "    print ('errors: ', errors)\n",
     "if __name__ == '__main__':\n",
     "    main()"
    ]
